--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
       </div>
       <toaster-container toaster-options="{ 'time-out': 10000, limit: 6 }"></toaster-container>
       <div id="content" class="content" ui-view></div>
+      <sidebar-content></sidebar-content>
       <div class="store-bounds"></div>
     </div>
 
@@ -56,7 +57,7 @@
     <!-- begin vendor scripts -->
     <script src="vendor/jquery/dist/jquery.min.js?v=$DIM_VERSION"></script>
     <script src="scripts/jquery-ui.position.js?v=$DIM_VERSION"></script>
-    <script src="vendor/angular/angular.min.js?v=$DIM_VERSION"></script>
+    <script src="scripts/app.bundle.js"></script>
     <script src="vendor/angular-ui-router/release/angular-ui-router.min.js?v=$DIM_VERSION"></script>
     <script src="vendor/angular-animate/angular-animate.min.js?v=$DIM_VERSION"></script>
     <script src="vendor/angular-aria/angular-aria.min.js?v=$DIM_VERSION"></script>
@@ -83,7 +84,6 @@
 
     <!-- begin app scripts -->
     <script src="scripts/util.js?v=$DIM_VERSION"></script>
-    <script src="scripts/dimApp.module.js?v=$DIM_VERSION"></script>
     <script src="scripts/dimApp.config.js?v=$DIM_VERSION"></script>
     <script src="scripts/services/dimActionQueue.factory.js?v=$DIM_VERSION"></script>
     <script src="scripts/services/dimBungieService.factory.js?v=$DIM_VERSION"></script>
