--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
           <span class="link" ng-click="app.showSupport($event)" translate="Support DIM"></span>
           <span class="link" ng-click="app.toggleVendors($event)" translate="Vendors"></span>
           <span class="link" ng-if="app.xur.available" ng-click="app.showXur($event)">Xûr</span>
+          <span class="link yeartwogear"><a href="https://github.com/DestinyItemManager/DIM/wiki/DIM-%23YearTwoGear-Giveaway" target="_blank">#YearTwoGear Giveaway</a></span>
         </div>
       </div>
       <toaster-container toaster-options="{ 'time-out': 10000, limit: 6 }"></toaster-container>
